Add a module-info file.